--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
       margin: 10px 0;
       line-height: 1.6;
     }
+    .preview textarea {
+      width: 100%;
+      height: 200px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 14px;
+      font-family: Arial, sans-serif;
+    }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
@@ -114,7 +123,7 @@
       <p><strong>Nama Penerima:</strong> <span id="previewPenerima"></span></p>
       <p><strong>Tarikh:</strong> <span id="previewTarikh"></span></p>
       <p><strong>Isi Kandungan:</strong></p>
-      <div id="previewContent"></div>
+      <textarea id="previewContentTextarea"></textarea>
     </div>
 
     <div class="footer">
@@ -142,10 +151,7 @@
       document.getElementById('previewNama').textContent = nama;
       document.getElementById('previewPenerima').textContent = penerima;
       document.getElementById('previewTarikh').textContent = tarikh;
-      document.getElementById('previewContent').innerHTML = getLetterContent(letterType, nama, penerima)
-        .split('\n\n')
-        .map(paragraph => `<p>${paragraph}</p>`)
-        .join('');
+      document.getElementById('previewContentTextarea').value = getLetterContent(letterType, nama, penerima);
 
       // Show preview section
       document.getElementById('previewSection').style.display = 'block';
@@ -157,8 +163,9 @@
       const nama = document.getElementById('nama').value;
       const penerima = document.getElementById('penerima').value;
       const tarikh = document.getElementById('tarikh').value;
+      const editedContent = document.getElementById('previewContentTextarea').value;
 
-      if (!letterType || !nama || !penerima || !tarikh) {
+      if (!letterType || !nama || !penerima || !tarikh || !editedContent) {
         alert("Sila isi semua maklumat yang diperlukan.");
         return;
       }
@@ -177,9 +184,8 @@
       doc.text(`Nama Penerima: ${penerima}`, 20, 50);
       doc.text(`Tarikh: ${tarikh}`, 20, 60);
 
-      // Isi Kandungan (3 Perenggan)
-      const content = getLetterContent(letterType, nama, penerima);
-      const splitText = doc.splitTextToSize(content, 170); // Split text to fit width
+      // Isi Kandungan (dari textarea yang telah diedit)
+      const splitText = doc.splitTextToSize(editedContent, 170); // Split text to fit width
       doc.text(splitText, 20, 80, { lineHeightFactor: 1.5 }); // Jarak antara perenggan
 
       // Save PDF
